--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * New upstream release candidate
   * qla4xxx: Fix build on some architectures lacking 64-bit I/O
     (Closes: #598503)
+  * [x86] Enable modular TM6000, TM6000_ALSA, TM6000_DVB
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
