--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * qla4xxx: Fix build on some architectures lacking 64-bit I/O
     (Closes: #598503)
   * [x86] Enable modular TM6000, TM6000_ALSA, TM6000_DVB
+  * [x86] Staging: fix Makefile so brcm80211 will actually build
+    (Closes: #599465)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
