--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Enable modular TM6000, TM6000_ALSA, TM6000_DVB
   * [x86] Staging: fix Makefile so brcm80211 will actually build
     (Closes: #599465)
+  * [x86] Enable modular IDEAPAD_ACPI (Closes: #599444)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
