crypto: Explicitly enable algorithm self-tests (Closes: #599441)
svn path=/dists/trunk/linux-2.6/; revision=16424

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Enable modular IDEAPAD_ACPI (Closes: #599444)
   * perf: Enable Perl and Python scripting
     - Move scripts to /usr/share/perf_<version>-core (Closes: #599624)
+  * crypto: Explicitly enable algorithm self-tests (Closes: #599441)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
