--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * perf: Enable Perl and Python scripting
     - Move scripts to /usr/share/perf_<version>-core (Closes: #599624)
   * crypto: Explicitly enable algorithm self-tests (Closes: #599441)
+  * [x86] Skip looking for ioapic overrides when ioapics are not present
+    (Closes: #598533)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
