Move last valid device ID from piix to ata_piix
piix has been kept around because it has 2 device IDs not listed in
other drivers:

PCI_DEVICE_ID_INTEL_82371FB_0 == 0x122e (PIIX function 0)
This function is the ISA bridge, not a PATA controller!

PCI_DEVICE_ID_INTEL_82801DB_1 == 0x24c1 (ICH4-L function 1)
This should be functionally identical to the ICH4's PATA
controller.

Add the latter device ID to ata_piix and disable piix (except on
alpha, which has not been converted to use libata).


svn path=/dists/trunk/linux-2.6/; revision=16427

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * crypto: Explicitly enable algorithm self-tests (Closes: #599441)
   * [x86] Skip looking for ioapic overrides when ioapics are not present
     (Closes: #598533)
+  * [x86] ata_piix: Add device ID for ICH4-L
+  * [armel/iop32x,ia64,x86] Disable BLK_DEV_PIIX as obsolete
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
