Update to 2.6.36-rc8
svn path=/dists/trunk/linux-2.6/; revision=16445

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.36~rc8-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
+    - writeback: always use sb->s_bdi for writeback purposes (Closes: #599466)
 
   [ Ben Hutchings ]
   * qla4xxx: Fix build on some architectures lacking 64-bit I/O
