--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ linux-2.6 (2.6.36~rc8-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
     - writeback: always use sb->s_bdi for writeback purposes (Closes: #599466)
+    - i7core_edac: fix panic in udimm sysfs attributes registration
+      (Closes: #600528)
 
   [ Ben Hutchings ]
   * qla4xxx: Fix build on some architectures lacking 64-bit I/O
