Revert "orion/kirkwood: reset PCIe unit on boot" since it breaks the QNAP TS-209.
svn path=/dists/trunk/linux-2.6/; revision=16463

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,10 @@ linux-2.6 (2.6.36~rc8-1~experimental.1) UNRELEASED; urgency=low
   * [x86] ata_piix: Add device ID for ICH4-L
   * [armel/iop32x,ia64,x86] Disable BLK_DEV_PIIX as obsolete
 
+  [ Martin Michlmayr ]
+  * Revert "orion/kirkwood: reset PCIe unit on boot" since it breaks
+    the QNAP TS-209.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
 linux-2.6 (2.6.36~rc6-1~experimental.1) experimental; urgency=low
