--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-linux-2.6 (2.6.36~rc8-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.36-1~experimental.1) UNRELEASED; urgency=low
 
-  * New upstream release candidate
+  * New upstream release: http://kernelnewbies.org/Linux_2_6_36
     - writeback: always use sb->s_bdi for writeback purposes (Closes: #599466)
     - i7core_edac: fix panic in udimm sysfs attributes registration
       (Closes: #600528)
