--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
   * Update Vcs-Browser URL for the switch to ViewVC
   * Point Vcs-{Svn,Browser} at trunk branch, since the sid branch does
     not always exist
+  * Build linux-libc-dev without multiarch if dpkg does not support it,
+    to support backports
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 05:42:57 +0000
 
