--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * Stop changing 'build' and 'source' symlinks in linux-image maintainer
+    scripts; these symlinks now belong to the linux-headers packages
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
+
 linux-2.6 (3.2.1-2) unstable; urgency=high
 
   [ Stefan Lippers-Hollmann ]
