--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Stop changing 'build' and 'source' symlinks in linux-image maintainer
     scripts; these symlinks now belong to the linux-headers packages
+  * Remove unused configuration variables from linux-image maintainer scripts
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
 
