Remove modules.*.bin in linux-image postrm script
Currently modules.builtin.bin is left behind.

svn path=/dists/trunk/linux-2.6/; revision=18619

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
     scripts; these symlinks now belong to the linux-headers packages
   * Remove unused configuration variables from linux-image maintainer scripts
   * Remove last vestige of /usr/doc transition from linux-image prerm script
+  * Remove modules.*.bin in linux-image postrm script; currently
+    modules.builtin.bin is left behind
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
 
