--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,11 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
     modules.builtin.bin is left behind
   * [alpha] Build with gcc-4.5 (Closes: #657112)
 
+  [ Thorsten Glaser ]
+  * [m68k] Use gcc-4.6 like (almost) all other architectures
+  * Pass the cflags define as CFLAGS_KERNEL and CFLAGS_MODULE to kbuild
+  * [m68k] Use cflags -ffreestanding (Closes: #648996)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
 
 linux-2.6 (3.2.1-2) unstable; urgency=high
