aufs: Update to aufs3.2-20120109 (fixes FTBFS on m68k)
svn path=/dists/trunk/linux-2.6/; revision=18630

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
   * Remove modules.*.bin in linux-image postrm script; currently
     modules.builtin.bin is left behind
   * [alpha] Build with gcc-4.5 (Closes: #657112)
+  * aufs: Update to aufs3.2-20120109 (fixes FTBFS on m68k)
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
