--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-linux-2.6 (3.2.1-3) UNRELEASED; urgency=low
+linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
+
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.2
+    - ext4: fix undefined behavior in ext4_fill_flex_info() (CVE-2009-4307)
+    - Unused iocbs in a batch should not be accounted as active (CVE-2012-0058)
+    - uvcvideo: Fix integer overflow in uvc_ioctl_ctrl_map()
+    - [arm] proc: clear_refs: do not clear reserved pages
 
   [ Ben Hutchings ]
   * Stop changing 'build' and 'source' symlinks in linux-image maintainer
