Group my maintainer script changes together
svn path=/dists/trunk/linux-2.6/; revision=18634

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,12 +8,13 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
     - [arm] proc: clear_refs: do not clear reserved pages
 
   [ Ben Hutchings ]
-  * Stop changing 'build' and 'source' symlinks in linux-image maintainer
-    scripts; these symlinks now belong to the linux-headers packages
-  * Remove unused configuration variables from linux-image maintainer scripts
-  * Remove last vestige of /usr/doc transition from linux-image prerm script
-  * Remove modules.*.bin in linux-image postrm script; currently
-    modules.builtin.bin is left behind
+  * Clean up linux-image maintainer scripts:
+    - Stop changing 'build' and 'source' symlinks; these now belong to the
+      linux-headers packages
+    - Remove unused configuration variables
+    - prerm: Remove last vestige of /usr/doc transition
+    - postrm: Remove modules.*.bin; currently modules.builtin.bin is left
+      behind
   * [alpha] Build with gcc-4.5 (Closes: #657112)
   * aufs: Update to aufs3.2-20120109 (fixes FTBFS on m68k)
 
