--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
   * [alpha] Build with gcc-4.5 (Closes: #657112)
   * aufs: Update to aufs3.2-20120109 (fixes FTBFS on m68k)
   * [m68k] Fix assembler constraint to prevent overeager gcc optimisation
+  * sdhci-pci: Include driver in installer
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
