--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
   * aufs: Update to aufs3.2-20120109 (fixes FTBFS on m68k)
   * [m68k] Fix assembler constraint to prevent overeager gcc optimisation
   * sdhci-pci: Include driver in installer
+  * [armel] udeb: Do not attempt to build lzo-modules udeb as lzo_compress
+    is now built-in (fixes FTBFS)
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
