Apply various important fixes from the 3.2 stable queue
svn path=/dists/trunk/linux-2.6/; revision=18656

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,15 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
     is now built-in (fixes FTBFS)
   * [armhf] udeb: Include rt2800usb in nic-modules, replacing rt2870sta
     which was removed from the kernel
+  * drm: Fix authentication kernel crash
+  * xfs: Fix missing xfs_iunlock() on error recovery path in xfs_readlink()
+  * jbd: Issue cache flush after checkpointing
+  * crypto: sha512 - make it work, undo percpu message schedule
+    - crypto: sha512 - reduce stack usage to safe number
+  * [x86] xen: size struct xen_spinlock to always fit in arch_spinlock_t
+  * l2tp: l2tp_ip - fix possible oops on packet receive
+  * macvlan: fix a possible use after free
+  * tcp: fix tcp_trim_head() to adjust segment count with skb MSS
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
