--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
+linux-2.6 (3.2.2-1) unstable; urgency=low
 
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.2
@@ -43,7 +43,7 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
   * [mips,octeon] Disabled CONFIG_FIXED_PHY as it conflicts with the octeon
     phy driver.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2012 06:19:55 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 31 Jan 2012 05:37:30 +0000
 
 linux-2.6 (3.2.1-2) unstable; urgency=high
 
