Add references to changleogs and some important changes for 3.2.{3,4}
svn path=/dists/trunk/linux-2.6/; revision=18663

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,15 @@
 linux-2.6 (3.2.4-1) UNRELEASED; urgency=low
 
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.3
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.4
+    - eCryptfs: Sanitize write counts of /dev/ecryptfs
+    - eCryptfs: Make truncate path killable
+    - eCryptfs: Check inode changes in setattr
+    - drm/i915: paper over missed irq issues with force wake voodoo
+    - USB: ftdi_sio: fix initial baud rate (Closes: #658164)
+    - USB: Realtek cr: fix autopm scheduling while atomic (Closes: #656724)
+
   [ Ben Hutchings ]
   * [armel] Add mv78xx0 flavour; thanks to Steve McIntyre for the config
   * net: Disable FIXED_PHY; this driver only causes trouble
