--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ linux-2.6 (3.2.4-1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [armel] Add mv78xx0 flavour; thanks to Steve McIntyre for the config
   * net: Disable FIXED_PHY; this driver only causes trouble
+  * PCI: Rework ASPM disable code (fixes power usage regression on some
+    systems)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Feb 2012 03:18:04 +0000
 
