--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.2.4-2) UNRELEASED; urgency=low
+
+  [ Aurelien Jarno ]
+  * hwmon: backport IT8728F support for linux 3.3. 
+
+ -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
+
 linux-2.6 (3.2.4-1) unstable; urgency=low
 
   * New upstream stable update:
