[amd64] Update rt featureset to 3.2.5-rt12
svn path=/dists/trunk/linux-2.6/; revision=18670

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ linux-2.6 (3.2.4-2) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * hwmon: backport IT8728F support for linux 3.3. 
 
+  [ Uwe Kleine-König ]
+  * [amd64] Update rt featureset to 3.2.5-rt12
+
  -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
 
 linux-2.6 (3.2.4-1) unstable; urgency=low
