[i386] enable rt featureset for 686-pae
svn path=/dists/trunk/linux-2.6/; revision=18671

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (3.2.4-2) UNRELEASED; urgency=low
 
   [ Uwe Kleine-König ]
   * [amd64] Update rt featureset to 3.2.5-rt12
+  * [i386] enable rt featureset for 686-pae
 
  -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
 
