ath9k: fix a WEP crypto related regression (Closes: #659484)
svn path=/dists/trunk/linux-2.6/; revision=18696

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ linux-2.6 (3.2.6-1) UNRELEASED; urgency=low
     module-init-tools
   * relay: prevent integer overflow in relay_open()
   * builddeb: Don't create files in /tmp with predictable names
+  * ath9k: fix a WEP crypto related regression (Closes: #659484)
 
  -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
 
