--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * Add Turkish debconf template translations (Mert Dirik) (Closes: #660117)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
+
 linux-2.6 (3.2.6-1) unstable; urgency=low
 
   * New upstream stable update:
