--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+linux-2.6 (3.3~rc4-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+  [ Ben Hutchings ]
+  * aufs: Update to aufs3.x-rcN-20120123
+  * rt: Disable until it is updated for Linux 3.3 or later
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 19 Feb 2012 20:52:21 +0000
+
 linux-2.6 (3.2.6-1) unstable; urgency=low
 
   * New upstream stable update:
