Use libata-based drivers for most of the remaining PATA controllers
svn path=/dists/sid/linux-2.6/; revision=18704

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,18 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * Add Turkish debconf template translations (Mert Dirik) (Closes: #660117)
+  * [amd64] Disable BLK_DEV_IDEPNP, BLK_DEV_OPTI621, IDE_GENERIC
+  * Use libata-based drivers for most of the remaining PATA controllers:
+    - pata_legacy replaces ide-generic
+    - pata_isapnp replaces ide-pnp
+    - pata_opti replaces opti621
+    - pata_hpt366 and pata_hpt37x replace hpt366
+    - pata_ninja32 replaces delkin_cb
+    - pata_cs5535 replaces cs5535
+    - pata_winbond replaces sl82c105
+    - [alpha] pata_cypress replaces cy82c693
+    - [hppa] pata_ns87415 replaces ns87415
+    - [sparc] Various replacements, as for x86 in 2.6.32-10
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
