--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,10 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
     - [alpha] pata_cypress replaces cy82c693
     - [hppa] pata_ns87415 replaces ns87415
     - [sparc] Various replacements, as for x86 in 2.6.32-10
+  * Disable old IDE subsystem [!ia64,m68k]:
+    - Disable BLK_DEV_IT8172, BLK_DEV_IT8213, BLK_DEV_TC86C001, BLK_DEV_TRM290
+    - [alpha] Disable BLK_DEV_4DRIVES, BLK_DEV_ALI14XX, BLK_DEV_DTC2278,
+      BLK_DEV_HT6560B, BLK_DEV_QD65XX, BLK_DEV_UMC8672
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
