fs: Enable EFI_PARTITION in all configurations (Closes: #660582)
svn path=/dists/sid/linux-2.6/; revision=18709

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
     - Disable BLK_DEV_IT8172, BLK_DEV_IT8213, BLK_DEV_TC86C001, BLK_DEV_TRM290
     - [alpha] Disable BLK_DEV_4DRIVES, BLK_DEV_ALI14XX, BLK_DEV_DTC2278,
       BLK_DEV_HT6560B, BLK_DEV_QD65XX, BLK_DEV_UMC8672
+  * fs: Enable EFI_PARTITION in all configurations (Closes: #660582)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
