--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
       BLK_DEV_HT6560B, BLK_DEV_QD65XX, BLK_DEV_UMC8672
   * fs: Enable EFI_PARTITION in all configurations (Closes: #660582)
 
+  [ Bastian Blank ]
+  * Don't advertise Xen support for rt images. (closes: #659988)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
 linux-2.6 (3.2.6-1) unstable; urgency=low
