[i386] Re-enable INTEL_IOMMU, IRQ_REMAP
svn path=/dists/sid/linux-2.6/; revision=18717

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
     - [alpha] Disable BLK_DEV_4DRIVES, BLK_DEV_ALI14XX, BLK_DEV_DTC2278,
       BLK_DEV_HT6560B, BLK_DEV_QD65XX, BLK_DEV_UMC8672
   * fs: Enable EFI_PARTITION in all configurations (Closes: #660582)
+  * [i386] Re-enable INTEL_IOMMU, IRQ_REMAP
 
   [ Bastian Blank ]
   * Don't advertise Xen support for rt images. (closes: #659988)
