--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
       BLK_DEV_HT6560B, BLK_DEV_QD65XX, BLK_DEV_UMC8672
   * fs: Enable EFI_PARTITION in all configurations (Closes: #660582)
   * [i386] Re-enable INTEL_IOMMU, IRQ_REMAP
+  * [mips/r5k-ip32] Enable INPUT_SGI_BTNS (previously INPUT_SGIO2_BTNS)
 
   [ Bastian Blank ]
   * Don't advertise Xen support for rt images. (closes: #659988)
