[powerpc/powerpc64] Enable IBM_EMAC (previously IBM_NEW_EMAC)
svn path=/dists/sid/linux-2.6/; revision=18727

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ linux-2.6 (3.2.6-2) UNRELEASED; urgency=low
   * fs: Enable EFI_PARTITION in all configurations (Closes: #660582)
   * [i386] Re-enable INTEL_IOMMU, IRQ_REMAP
   * [mips/r5k-ip32] Enable INPUT_SGI_BTNS (previously INPUT_SGIO2_BTNS)
+  * [powerpc/powerpc64] Enable IBM_EMAC (previously IBM_NEW_EMAC)
 
   [ Bastian Blank ]
   * Don't advertise Xen support for rt images. (closes: #659988)
