Don't built-in ramdisk support.
* debian/changelog: Update.
* debian/config: Remove BLK_DEV_RAM and BLK_DEV_RAM_COUNT overrides.

svn path=/dists/sid/linux-2.6/; revision=18730

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ linux-2.6 (3.2.7-1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Don't advertise Xen support for rt images. (closes: #659988)
   * [mips,mipsel] Use ext4 for all ext-variants. (closes: #660446)
+  * [m68k,mips,mipsel] Don't built-in ramdisk support.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
