--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ linux-2.6 (3.2.7-1) UNRELEASED; urgency=low
   * Don't advertise Xen support for rt images. (closes: #659988)
   * [mips,mipsel] Use ext4 for all ext-variants. (closes: #660446)
   * [m68k,mips,mipsel] Don't built-in ramdisk support.
+  * [hppa,mips,mipsel] Don't built-in cramfs support.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
