--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ linux-2.6 (3.2.7-1) UNRELEASED; urgency=low
   * [mips,mipsel] Use ext4 for all ext-variants. (closes: #660446)
   * [m68k,mips,mipsel] Don't built-in ramdisk support.
   * [hppa,mips,mipsel] Don't built-in cramfs support.
+  * [alpha,hppa] Don't built-in ext2.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:29:39 +0000
 
