--- a/debian/changelog
+++ b/debian/changelog
@@ -144,6 +144,10 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
     - timer/hrtimer: check properly for a running timer
   * tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
 
+  [ Salvatore Bonaccorso ]
+  * ACPI / EC: Use busy polling mode when GPE is not enabled.
+    Thanks to Jakobus Schurz <jakobus.schurz@gmail.com> (Closes: #846792)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 01 Mar 2017 15:42:54 +0000
 
 linux (4.9.13-1) unstable; urgency=medium
