--- a/debian/changelog
+++ b/debian/changelog
@@ -143,6 +143,8 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
   * [rt] Update to 4.9.13-rt12:
     - timer/hrtimer: check properly for a running timer
   * tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
+  * [rt] Refresh one patch that had a textual conflict with 4.9.14
+  * Ignore ABI changes in rds and ufshcd, not useful to OOT modules
 
   [ Salvatore Bonaccorso ]
   * ACPI / EC: Use busy polling mode when GPE is not enabled.
