Ignore ABI change for first_ec (not declared in public header)

--- a/debian/changelog
+++ b/debian/changelog
@@ -150,6 +150,7 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
   * ACPI / EC: Use busy polling mode when GPE is not enabled.
     Thanks to Jakobus Schurz <jakobus.schurz@gmail.com> (Closes: #846792)
   * Ignore ABI changes for acpi_ec_{add,remove}_query_handler
+  * Ignore ABI change for first_ec (not declared in public header)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 01 Mar 2017 15:42:54 +0000
 
