[amd64] Don't WARN about expected W+X pages on Xen (see #852324)

--- a/debian/changelog
+++ b/debian/changelog
@@ -147,6 +147,7 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
   * Ignore ABI changes in rds and ufshcd, not useful to OOT modules
   * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
   * userns: Avoid ABI change for CVE-2017-6874 fix
+  * [amd64] Don't WARN about expected W+X pages on Xen (see #852324)
 
   [ Salvatore Bonaccorso ]
   * ACPI / EC: Use busy polling mode when GPE is not enabled.
