--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (4.9.8-1) UNRELEASED; urgency=medium
+linux (4.9.8-2) UNRELEASED; urgency=medium
 
   * New upstream stable update:
     https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.7
@@ -167,7 +167,7 @@ linux (4.9.8-1) UNRELEASED; urgency=medium
   * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
   * userns: Avoid ABI change for CVE-2017-6874 fix
 
- -- Ben Hutchings <ben@decadent.org.uk>  Fri, 27 Jan 2017 18:14:31 +0000
+ -- Bo Yang <yangbo@deepin.com>  Thu, 16 Mar 2017 11:54:15 +0800
 
 linux (4.9.6-3) unstable; urgency=medium
 
