[hppa] Switch to debian default config option for bonding, irda and atalk

--- a/debian/changelog
+++ b/debian/changelog
@@ -155,6 +155,9 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
   * Ignore ABI changes for acpi_ec_{add,remove}_query_handler
   * Ignore ABI change for first_ec (not declared in public header)
 
+  [ Helge Deller ]
+  * [hppa] Switch to debian default config option for bonding, irda and atalk
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 01 Mar 2017 15:42:54 +0000
 
 linux (4.9.13-1) unstable; urgency=medium
