fjes: Disable auto-loading, as this driver matches a very common ACPI ID (Closes: #853976)

--- a/debian/changelog
+++ b/debian/changelog
@@ -149,6 +149,8 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
   * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
   * userns: Avoid ABI change for CVE-2017-6874 fix
   * [amd64] Don't WARN about expected W+X pages on Xen (see #852324)
+  * fjes: Disable auto-loading, as this driver matches a very common ACPI ID
+    (Closes: #853976)
 
   [ Salvatore Bonaccorso ]
   * ACPI / EC: Use busy polling mode when GPE is not enabled.
