--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (4.9.15-1) UNRELEASED; urgency=medium
+linux (4.9.16-1) UNRELEASED; urgency=medium
 
   * New upstream stable update:
     https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.14
@@ -201,6 +201,36 @@ linux (4.9.15-1) UNRELEASED; urgency=medium
     - mm: do not call mem_cgroup_free() from within mem_cgroup_alloc()
     - fat: fix using uninitialized fields of fat_inode/fsinfo_inode
     - [x86] drivers: hv: Turn off write permission on the hypercall page
+    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.16
+    - USB: serial: digi_acceleport: fix OOB data sanity check
+    - USB: serial: digi_acceleport: fix OOB-event processing
+    - crypto: improve gcc optimization flags for serpent and wp512
+    - ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
+    - dw2102: don't do DMA on stack
+    - i2c: add missing of_node_put in i2c_mux_del_adapters
+    - [ppc64el] Emulation support for load/store instructions on LE
+    - [powerpc*] xics: Work around limitations of OPAL XICS priority handling
+    - PCI: Prevent VPD access for QLogic ISP2722
+    - usb: gadget: dummy_hcd: clear usb_gadget region before registration
+    - usb: dwc3: gadget: make Set Endpoint Configuration macros safe
+    - [armhf] usb: dwc3-omap: Fix missing break in dwc3_omap_set_mailbox()
+    - usb: gadget: function: f_fs: pass companion descriptor along
+    - Revert "usb: gadget: uvc: Add missing call for additional setup data"
+    - usb: host: xhci-plat: Fix timeout on removal of hot pluggable xhci
+      controllers
+    - USB: serial: safe_serial: fix information leak in completion handler
+    - USB: serial: omninet: fix reference leaks at open
+    - USB: iowarrior: fix NULL-deref at probe (CVE-2016-2188)
+    - USB: iowarrior: fix NULL-deref in write
+    - USB: serial: io_ti: fix NULL-deref in interrupt callback
+    - USB: serial: io_ti: fix information leak in completion handler
+    - [armhf] serial: samsung: Continue to work if DMA request fails
+    - [s390x] KVM: Fix guest migration for huge guests resulting in panic
+    - [armhf.arm64] KVM: Let vcpu thread modify its own active state
+    - dm: flush queued bios when process blocks to avoid deadlock
+    - rc: raw decoder for keymap protocol is not loaded on register
+    - ext4: don't BUG when truncating encrypted inodes on the orphan list
+    - IB/mlx5: Verify that Q counters are supported
 
   [ Ben Hutchings ]
   * [media] dvb-usb: don't use stack for firmware load or reset
@@ -211,7 +241,6 @@ linux (4.9.15-1) UNRELEASED; urgency=medium
     - timer/hrtimer: check properly for a running timer
   * [rt] Refresh one patch that had a textual conflict with 4.9.14
   * Ignore various ABI changes that shouldn't affect OOT modules
-  * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
   * userns: Avoid ABI change for CVE-2017-6874 fix
   * [amd64] Don't WARN about expected W+X pages on Xen (see #852324)
   * fjes: Disable auto-loading, as this driver matches a very common ACPI ID
