Reorganise and improve comments for ignored ABI changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -210,7 +210,7 @@ linux (4.9.15-1) UNRELEASED; urgency=medium
   * [rt] Update to 4.9.13-rt12:
     - timer/hrtimer: check properly for a running timer
   * [rt] Refresh one patch that had a textual conflict with 4.9.14
-  * Ignore ABI changes in rds and ufshcd, not useful to OOT modules
+  * Ignore various ABI changes that shouldn't affect OOT modules
   * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
   * userns: Avoid ABI change for CVE-2017-6874 fix
   * [amd64] Don't WARN about expected W+X pages on Xen (see #852324)
