--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux (4.9.16-1) UNRELEASED; urgency=medium
+linux (4.9.16-1) unstable; urgency=medium
 
   * New upstream stable update:
     https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.14
@@ -255,7 +255,7 @@ linux (4.9.16-1) UNRELEASED; urgency=medium
   [ Helge Deller ]
   * [hppa] Switch to debian default config option for bonding, irda and atalk
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 01 Mar 2017 15:42:54 +0000
+ -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 22 Mar 2017 17:01:40 +0100
 
 linux (4.9.13-1) unstable; urgency=medium
 
